se generan parcial en scss, variables, etc. se genera todo el SEO del sitio. se coloca animacion solicitada

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/ico">
+    <meta name="description" content="Descubre nuestra gama de repuestos de autos de gran calidad. Encuentra productos para mantenimiento, reparación y mejora de vehículos de todas las marcas. Explora nuestro catálogo y encuentra las piezas que tu vehículo necesita">
+    <meta name="keywords" content="Repuestos de autos, Piezas de automoviles, Recambios de coches, Componentes automotrices, Accesorios para autos, Catalogo de repuestos, Repuestos originales, Productos automotrices, Partes de vehiculos, Piezas de calidad, Compra de repuestos, Venta de repuestos, Tienda de repuestos, Seleccion de productos, Catalogo de accesorios, Repuestos para vehiculos, Componentes de calidad, Compra en linea, Tienda en línea, Catálogo de piezas, Venta en línea, Repuestos para todas las marcas, Compra de piezas de autos, Catalogo automotriz, Accesorios de coche, Piezas de motor, Compra de componentes, Repuestos confiables, Catalogo de productos de automoviles, Piezas de carroceria, Repuestos de alta calidad.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -12,13 +14,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>LA DELFINA | Productos</title>
 </head>
-<body class="font">
+<body class="grid-container-prod">
     <header id="top" class="header-1"> 
         <nav id="nav" class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a href="../index.html">
               <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,7 +55,7 @@
     <main class="main">
         <!--Contenido principal-->
         <h1>PRODUCTOS</h1>
-        <h4>Conocé nuestros productos, comprá y... Te lo llevamos!</h4>
+        <h2>Conocé nuestros productos, comprá y... Te lo llevamos!</h2>
         <div class="satisfaccion">
             <form class="formbb">
                 <input placeholder="Que deseas buscar?" >
@@ -100,7 +102,7 @@
         <a href="#top" class="a">Ir a la parte superior</a>
         <div>
             <p>Redes sociales</p>
-                <ul class="redes-sociales">
+                <ul class="rs">
                     <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
                     <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
                     <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
@@ -108,7 +110,8 @@
         </div>
             <p> CONTÁCTANOS LA DELFINA S.A.
                 0800-777-4272
-                ventas@ladelfina.com.ar</p><br>
+                ventas@ladelfina.com.ar
+            </p><br>
             <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
             <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
