--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/ico">
+    <meta name="description" content="Descubre quienes somos, tu fuente confiable de repuestos de autos. En nuestra seccion de 'Sobre Nosotros', te presentamos nuestra historia, con que empresas generamos alianzas y nuestro equipo de expertos en repuestos automotrices.">
+    <meta name="keywords" content="Sobre nosotros, Nuestra empresa, Historia de la compañia, Mision y vision, Valores de la empresa, Equipo de trabajo, Experiencia en repuestos, Compromiso con la calidad, Conocenos, Trayectoria de la empresa, Pasion por los autos, Repuestos automotrices, Historia de exito, Confiabilidad, Calidad en repuestos, Servicio al cliente, Conexion con los clientes, Equipo de expertos, Repuestos de alta calidad, Lider en repuestos, Innovación automotriz, Experiencia en la industria, Compromiso con los clientes, Repuestos para todas las marcas, Soluciones automotrices, Dedicación a la excelencia, Vision a largo plazo, Exito en repuestos, Nuestra mision, Historia de logros, Excelencia en repuestos">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -12,13 +14,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>LA DELFINA | Sobre nosotros</title>
 </head>
-<body class="font">
+<body>
     <header id="top" class="header-1"> 
         <nav id="nav" class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a href="../index.html">
               <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -54,11 +56,11 @@
         <!--Contenido principal-->
         <h1>QUIENES SOMOS</h1>
             <div class="flex">
-                <article class="card"><img src="../assets/quienes somos/quienes somos 1.png" alt="Empresa produccion" class="border-img"> <p>Creamos LA DELFINA en 2010 a partir del amor y pasión que tenemos por los autos y el buen serivicio. Somos una distribuidora con una gran experiencia</p></article>
-                <article class="card"><img src="../assets/quienes somos/quienes somos 2.png" alt="Empresa produccion" class="border-img"><p>En 2019 nos convertimos en una empresa, nos expandimos, llegamos a varios puntos de la provincia y actualmente tenemos una sucursal en expectante inaguración en Brasil.</p></article>
-                <article class="card"><img src="../assets/quienes somos/quienes somos 3.png" alt="Empresa produccion" class="border-img"><p>Logramos aliarnos con pioneros de la industria como lo son Fantini SA, M&L, DINA SRL, entre otros mayoristas con amplia variedad en sus catálogos.</p></article>
-                <article class="card"><img src="../assets/quienes somos/quienes somos 4.png" alt="Empresa produccion" class="border-img"><p>En 2020 certificamos la norma internacional ISO 9001:2015 en gestión de calidad. Nuestra principal característica es la calidad, trabajamos con un staff capacitado.</p></article>
-                <article class="card"><img src="../assets/quienes somos/quienes somos 5.png" alt="Empresa produccion" class="border-img"><p>Sabemos que la honestidad y la transparencia son pilares básicos del negocio para poder ofrecer, no solo los mejores productos, sino también un mejor servicio.</p></article>
+                <article class="card"><img src="../assets/quienes somos/quienes somos 1.png" alt="Estanteria de deposito." class="border-img"> <p>Creamos LA DELFINA en 2010 a partir del amor y pasión que tenemos por los autos y el buen serivicio. Somos una distribuidora con una gran experiencia</p></article>
+                <article class="card"><img src="../assets/quienes somos/quienes somos 2.png" alt="Recepcion de local." class="border-img"><p>Luego nos expandimos, llegamos a varios puntos de la provincia y actualmente tenemos una sucursal en expectante inaguración en la capital de Brasil.</p></article>
+                <article class="card"><img src="../assets/quienes somos/quienes somos 3.png" alt="Cajas de mercaderia." class="border-img"><p>Logramos aliarnos con pioneros de la industria como lo son Fantini SA, M&L, DINA SRL, entre otros mayoristas con amplia variedad en sus catálogos.</p></article>
+                <article class="card"><img src="../assets/quienes somos/quienes somos 4.png" alt="Deposito con autoelevador" class="border-img"><p>En 2020 certificamos la norma internacional ISO 9001:2015 en gestión de calidad. Nuestra principal característica es la calidad, trabajamos con un staff capacitado.</p></article>
+                <article class="card"><img src="../assets/quienes somos/quienes somos 5.png" alt="Deposito con mercaderia" class="border-img"><p>Sabemos que la honestidad y la transparencia son pilares básicos del negocio para poder ofrecer, no solo los mejores productos, sino también un mejor servicio.</p></article>
             </div>
     </main>
     <div>
@@ -72,7 +74,7 @@
         <a href="#top" class="a">Ir a la parte superior</a>
         <div>
         <p>Redes sociales</p>
-            <ul class="redes-sociales">
+            <ul class="rs">
                 <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
                 <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
@@ -80,7 +82,8 @@
         </div>
         <p> CONTÁCTANOS LA DELFINA S.A.
             0800-777-4272
-            ventas@ladelfina.com.ar</p><br>
+            ventas@ladelfina.com.ar
+        </p><br>
         <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
         <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
