--- a/pages/sumate.html
+++ b/pages/sumate.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/type.icon">
+    <meta name="description" content="¡Únete a nuestra comunidad de amantes de los repuestos de autos! En nuestra empresa, encontrarás un lugar óptimo para trabajar donde cuidamos el ambiente laboral y el desarrollo de las personas dentro del mismo. Si tenes ganas de crecer y pertenecer a nuestra familia, ¡Envianos tu informacion!">
+    <meta name="keywords" content="Súmate, Unete a nosotros, Desarrollo, Crecimiento personal, Hacerse miembro, Forma parte de nuestro equipo, Colabora con nosotros, Participa, Comunidad de repuestos, Registro, Unirse a la comunidad, Participacion, Colaboracion, Formulario, Convertirse en miembro, Unete al club, Forma parte de nuestra comunidad, Hazte socio, Integracion, Participa activamente, Involucrate, Forma parte de nuestro grupo, Registrate, Conviertete en parte de nuestro equipo, Asociacion, Unete, Integracion, Hazte parte de nuestra comunidad automotriz, Sumate a nuestra red, Inscribete.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -12,13 +14,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>LA DELFINA | Sumate!</title>
 </head>
-<body class="font">
+<body>
   <header id="top" class="header-1"> 
       <nav id="nav" class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a href="../index.html">
             <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -54,7 +56,7 @@
     <main class="contacto-main">
         <h1>Sumate a LA DELFINA</h1>
         <h2>En La Delfina trabajamos desde una década para crecer y desarrollarnos en todo el país ofreciendo el mejor servicio. Esto lo logramos gracias a la participación, compromiso y el trabajo conjunto diario de todos los que la integramos.</h2>
-        <h2><strong>Si querés desarrollarte profesionalmente y formar parte de un equipo ganador, envíanos tus datos y nos comunicaremos a la brevedad</strong></h2>
+        <h3><strong>Si querés desarrollarte profesionalmente y formar parte de un equipo ganador, envíanos tus datos y nos comunicaremos a la brevedad</strong></h3>
         <section class="centrado">
             <form action="../index.html">
                 <div class="form-sumate">
@@ -117,7 +119,7 @@
         <a href="#top" class="a">Ir a la parte superior</a>
         <div>
             <p>Redes sociales</p>
-            <ul class="redes-sociales">
+            <ul class="rs">
                 <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
                 <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
@@ -125,7 +127,8 @@
         </div>
             <p> CONTÁCTANOS LA DELFINA S.A.
                 0800-777-4272
-                ventas@ladelfina.com.ar</p><br>
+                ventas@ladelfina.com.ar
+            </p><br>
             <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
             <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
