--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="description" content="Descubre los mejores repuestos de autos y aceites para un rendimiento optimo. Soluciones confiables para tu vehículo a solo un clic de distancia.">
+    <meta name="keywords" content="Repuestos de automoviles, Piezas de automoviles, Recambios de coches, Aceites para autos, Aceites de motor, Aceites sinteticos, Filtros de aceite, Carrocerias de vehículos, Paneles de carroceria, Faros de repuesto, Neumaticos para autos, Baterias de automoviles, Lubricantes para coches, Aceite de transmision, Filtros de aire de repuesto, Pastillas de freno, Discos de freno, Aceites para cajas de cambios, Amortiguadores de automoviles, Radiadores de repuesto, Bombas de agua de coche, Aceite de direccion asistida, Filtros de combustible, Escapes, Juntas de motor, Correas de distribucion, Repuestos originales, Accesorios automotrices, Tienda de repuestos de autos">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
@@ -12,13 +14,14 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>LA DELFINA</title>
 </head>
-<body class="font">
+<body>
+  <!--Inicio Header-->
     <header id="top" class="header-1 header"> 
           <a href="#">
             <img src="./assets/Logo principal.png" alt="Logo principal" class="logo"></a>
             <nav id="nav" class="navbar navbar-expand-lg">
               <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse header-1" id="navbarSupportedContent">
@@ -52,13 +55,12 @@
           </div>
     </header>
     <!--Inicio página-->
-    
     <main class="grid-container-index main">
         <div class="grid-1">   
-          <h1>BIENVENIDOS A LA DELFINA</h1>
+          <h1>LA DELFINA REPUESTOS</h1>
           <h2>CASAS DE REPUESTOS DEL AUTOMOTOR EN CÓRDOBA CAPITAL</h2>
           <h3>Repuestos Renault, Ford, Volskwagen, Fiat, Audi, Chevrolet. Autopartes.</h3>
-          <h5>Embragues, Frenos, Bomba de Agua, Tren delantero, Ópticas, Inyección electrónica, Guardabarros, Tazas, Amortiguadores, Paragolpes, Baterías.</h5>
+          <h4>Embragues, Frenos, Bomba de Agua, Tren delantero, Ópticas, Inyección electrónica, Guardabarros, Tazas, Amortiguadores, Paragolpes, Baterías.</h4>
         </div>
     </main>
 
@@ -67,46 +69,46 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Stock</h5>
-              <p class="card-text">Contamos con la mayor variedad de stock de las marcas que comercializamos (productos nacionales e importados).</p>
-              <a href="#" class="btn submit-index centrado">Conocé más</a>
+              <p class="card-text">Contamos con la mayor variedad de stock de las marcas que comercializamos (productos nacionales e importados). ¡CONSÚLTANOS YA!</p>
+              <a href="./pages/contacto.html" class="btn submit-index centrado">Comunicate</a>
             </div>
           </div>
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Precios</h5>
-              <p class="card-text">Tenemos precios competitivos en todas nuestras líneas debido a que realizamos mejoras continuas en procesos y costos.</p>
+              <p class="card-text">Tenemos precios competitivos en todas nuestras líneas debido a que realizamos mejoras continuas en procesos y costos, optimizando los mismos</p>
               <a href="#" class="btn submit-index centrado">Conocé más</a>
             </div>
           </div>
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Servicio</h5>
-              <p class="card-text">El Departamento de Atención permite que clientes realicen pedidos. Incorporamos nuevas tecnologías de comunicación.</p>
+              <p class="card-text">El Departamento de Atención permite que clientes realicen pedidos en cualquier momento. Incorporamos nuevas tecnologías de comunicación.</p>
               <a href="#" class="btn submit-index centrado">Conocé más</a>
             </div>
           </div>
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Entrega</h5>
-              <p class="card-text">Contamos con entregas en 24hs. También disponemos de entregas express y retiro por nuestro mostrador en menos de 30min.</p>
+              <p class="card-text">Contamos con entregas en 24hs todos los días del año. También disponemos de entregas express y retiro por nuestro mostrador en menos de 30min.</p>
               <a href="./pages/productos.html" class="btn submit-index centrado">¡Comprá acá!</a>
             </div>
           </div>
         </div>
 
-        <section class="index datos">
+        <section class="index datos animacion">
             <div><strong>3927</strong> CLIENTES CONTENTOS</div><div><strong>1299918</strong> PRODUCTOS VENDIDOS</div><div><strong>30</strong> AÑOS DE EXPERIENCIA</div><div><strong>9/10</strong> NOS RECOMIENDAN</div>
         </section>
 
-        <div class="formbb">
+        <div class="formbb animacion">
             <p>Nos llena de felicidad poder anunciarles que estamos incursionando en el mundo de los chasis de la mano de los mejores: <a href="https://collinotiendaoficial.com.ar/" target="_blank" class="ab">COLLINO</a>. Les dejamos un poco de lo que fue su último gran trabajo. Innovadores y distruptivos es como se definen y este chasis afirma estos conceptos
         </div>
 
-        <div class="iframe">  
+        <div class="iframe animacion">  
               <iframe class="clase-video" src="https://www.youtube.com/embed/PQzeYa6_ejw?si=WR13k6yOIIEObm01" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
-        <div class="h2-grid">
+        <div class="h2-grid animacion">
             <h2>NOS ACOMPAÑAN EN ESTE CAMINO</h2>
         </div>
         <section class="nos-acompanan">
@@ -128,7 +130,7 @@
         <a href="#top" class="a">Ir a la parte superior</a>
         <div>
         <p>Redes sociales</p>
-            <ul>
+            <ul class="rs">
                 <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
                 <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
@@ -136,7 +138,8 @@
         </div>
             <p> CONTÁCTANOS LA DELFINA S.A.
                 0800-777-4272
-                ventas@ladelfina.com.ar</p><br>
+                ventas@ladelfina.com.ar
+            </p><br>
             <a href="./pages/avisos-legales.html" class="a">Avisos legales</a>
             <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
