--- a/pages/avisos-legales.html
+++ b/pages/avisos-legales.html
@@ -6,19 +6,21 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="description" content="En nuestra página de avisos legales, te ofrecemos información importante sobre las políticas, términos y condiciones y demás. Aseguramos transparencia y cumplimiento de las regulaciones para tu confianza y seguridad">
+    <meta name="keywords" content="Avisos legales, Términos y condiciones, Política de privacidad, Política de cookies, Derechos de autor, Ley de protección de datos, Responsabilidad legal, Uso del sitio web, Condiciones de venta, Información legal, Ley de comercio electrónico, Protección del consumidor, Derechos de propiedad intelectual, Cumplimiento normativo, Limitación de responsabilidad, Política de devoluciones, Garantía de productos, Normativas legales, Cumplimiento legal, Privacidad en línea, Ley de protección al consumidor, Leyes de comercio, Derechos de los usuarios, Tratamiento de datos personales, Protección de datos en línea, Cumplimiento de regulaciones, Derechos de los clientes, Términos de uso, Legislación aplicable, Seguridad en línea, Notificación legal.">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>LA DELFINA | Aviso Legales</title>
 </head>
-<body class="font">
+<body>
     <header id="top" class="header-1"> 
         <nav id="nav" class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a href="../index.html">
               <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -56,7 +58,7 @@
             <p>Avisos legales: Resolución 244/2020 de la Secretaría de Comercio Interior del Ministerio de Desarrollo Productivo
          Última modificación: 01/10/2020
          Dispone que los plazos previstos en las garantías contractuales y legales en los términos de la Ley N° 24.240 se tienen por suspendidos por todo el periodo en que los consumidores se hayan visto imposibilitados de ejercer sus derechos en virtud del Aislamiento Social, Preventivo y Obligatorio dictado por el Decreto Nº 297 de fecha 19 de marzo de 2020 y sus modificatorios.</p>
-            <p>         Los repuestos y accesorios con la segunda importación más grande de la Argentina. Según datos del INDEC, en abril de 2023 representaron el 22% de las importaciones con 1.322 millones de dólares y un incremento del 3,3% respecto de abril del año anterior. En realidad, son un componente fundamental de los procesos industriales. Sin embargo, está prohibido el transporte transfronterizo de repuestos de automotores y otros. LA DELFINA, cumple con todas las normas y leyes nencesarias para su tranquilidad</p>
+            <p>Los repuestos y accesorios con la segunda importación más grande de la Argentina. Según datos del INDEC, en abril de 2023 representaron el 22% de las importaciones con 1.322 millones de dólares y un incremento del 3,3% respecto de abril del año anterior. En realidad, son un componente fundamental de los procesos industriales. Sin embargo, está prohibido el transporte transfronterizo de repuestos de automotores y otros. LA DELFINA, cumple con todas las normas y leyes nencesarias para su tranquilidad</p>
     <p><a href="https://www.boletinoficial.gob.ar/detalleAviso/primera/234093/20200826" target="_blank">Accedé a la norma completa: Resolución 244/2020</p></a>
     </main>
     <div>
@@ -70,7 +72,7 @@
         <a href="#top" class="a">Ir a la parte superior</a>
         <div>
         <p>Redes sociales</p>
-            <ul class="redes-sociales">
+            <ul class="rs">
                 <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
                 <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
@@ -78,7 +80,8 @@
         </div>
         <p> CONTÁCTANOS LA DELFINA S.A.
             0800-777-4272
-            ventas@ladelfina.com.ar</p><br>
+            ventas@ladelfina.com.ar
+        </p><br>
         <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
         <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
