--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,19 +6,21 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="description" content="¿Tienes preguntas, comentarios o necesitas asistencia? Nuestro equipo de expertos en repuestos está para ayudarte. Contacta con nosotros por cualquiera de nuestros canales.">
+    <meta name="keywords" content="Contacto, Información de contacto, Formulario de contacto, Atención al cliente, Consultas, Soporte técnico, Servicio al cliente, Comunicación, Comentarios, Preguntas, Solicitud de información, Consultas de productos, Redes, Asistencia, Ayuda, Contacto rápido, Dirección, Teléfono, Correo electrónico, Horario de atención, Mensajes, Asesoramiento, Comunicarse con nosotros, Consulta de existencias, Servicio de atención al cliente, Información de la empresa, Consultas generales.">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>LA DELFINA | Contacto</title>
 </head>
-<body class="font">
+<body>
     <header id="top" class="header-1"> 
         <nav id="nav" class="navbar navbar-expand-lg">
             <div class="container-fluid">
             <a href="../index.html">
                 <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
                 <span class="navbar-toggler-icon"></span>
             </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,13 +55,19 @@
     <main class="contacto-main">
         <!--Contenido principal-->
         <section>
-            <h1>Contactate con nosotros</h1>
-            <h5>CONTÁCTANOS 0800-777-4272 </h5>
-            <h5>Mail: ventas@ladelfina.com.ar</h5>
-            <h5>Sucursales</h5>
-            <h5>Avenida Santa Ana 5968 Barrio Parque república</h5>
-            <h5>Avenida Donato Álvarez 568 Barrio Arguello</h5>
-            <h4 class="h4">Completa el siguiente formulario</h4>
+            <div>
+                <h1>Contactate con nosotros</h1>
+                <h2>Llamanos al 0800-777-4272 </h2>
+                <h2>Mail: ventas@ladelfina.com.ar</h2>
+            </div>
+            <div>
+                <h2>Sucursales</h2>
+                <h3>Avenida Santa Ana 5968 Barrio Parque república</h3>
+                <h3>Avenida Donato Álvarez 568 Barrio Arguello</h3>
+            </div>
+            <div>
+                <h2>Completa el siguiente formulario</h2>
+            </div>
             <div class="centrado">
                 <form action="../index.html">
                     <div class="form-sumate ">
@@ -92,7 +100,7 @@
         </section>
         <div class="contact-h3"><h3><strong>UBICACIÓN</strong></h3></div>
         <section class="iframe">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13631.987819820783!2d-64.2643339!3d-31.3314572!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f3ff1ae6979%3A0xa861632e66d315f7!2sLA%20DELFINA!5e0!3m2!1ses-419!2sar!4v1694461819498!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="clase-video" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13631.987819820783!2d-64.2643339!3d-31.3314572!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f3ff1ae6979%3A0xa861632e66d315f7!2sLA%20DELFINA!5e0!3m2!1ses-419!2sar!4v1694461819498!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <div>
@@ -106,7 +114,7 @@
         <a href="#top" class="a">Ir a la parte superior</a>
         <div>
         <p>Redes sociales</p>
-            <ul class="redes-sociales">
+            <ul class="rs">
                 <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
                 <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
@@ -114,7 +122,8 @@
         </div>
             <p> CONTÁCTANOS LA DELFINA S.A.
                 0800-777-4272
-                ventas@ladelfina.com.ar</p><br>
+                ventas@ladelfina.com.ar
+            </p><br>
             <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
             <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
