--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,19 +6,21 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="description" content="Explora la galería de nuestra empresa, instalaciones, locales y personal de LA DELFINA. Conoce un poco más de nosotros con estas fotos">
+    <meta name="keywords" content="Galeria de repuestos, Deposito, Imagenes de repuestos, Fotos de piezas de autos, Catalogo visual, Productos automotrices, Componentes de vehiculos, Repuestos de calidad, Fotografías de repuestos, Selección de repuestos, Imágenes de accesorios, Catalogo de productos, Exploracion visual, Exposicion de piezas, Accesorios para coches, Partes de automoviles, Vehiculos y repuestos, Detalles visuales, Componentes automotrices, Fotos de calidad, Exploración de productos, Catalogo de automoviles, Visualizacion de repuestos, Fotografias de calidad, Repuestos originales, Piezas automovilisticas, Experiencia visual, Catalogo de carroceria, Imagenes de motor, Galeria de accesorios, Exploracion de repuestos, Fotografias de empresas de autos">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>LA DELFINA | Galeria</title>
 </head>
-<body class="font">
+<body>
     <header id="top" class="header-1"> 
         <nav id="nav" class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a href="../index.html">
               <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -50,33 +52,36 @@
           </div>
         </nav>
       </header>
+    <div>
+      <h1 class="titulo-galeria">NUESTRA EMPRESA</h1>
+    </div>
     <div class="grid-container">
         <div class="grid-img1">
             <img src="../assets/Sucursal/Sucursal1.jpg" alt="Nuestra sucursal">
         </div>
         <div class="grid-img2">
-            <img src="../assets/Sucursal/Sucursal2.jpg" alt="">
+            <img src="../assets/Sucursal/Sucursal2.jpg" alt="Empresa y personal">
         </div>
         <div class="grid-img3">
-            <img src="../assets/Sucursal/Sucursal3.jpg" alt="">
+            <img src="../assets/Sucursal/Sucursal3.jpg" alt="Nuestro deposito principal">
         </div>
         <div class="grid-img4">
-            <img src="../assets/Sucursal/Sucursal4.jpg" alt="">
+            <img src="../assets/Sucursal/Sucursal4.jpg" alt="Transporte para repartir">
         </div>
         <div class="grid-img5">
-            <img src="../assets/Sucursal/Sucursal5.jpg" alt="">
+            <img src="../assets/Sucursal/Sucursal5.jpg" alt="Baterias de litio para autos">
         </div>
         <div class="grid-img6">
-            <img src="../assets/Sucursal/Sucursal6.jpg" alt="">
+            <img src="../assets/Sucursal/Sucursal6.jpg" alt="Estanteria de repuestos de electricidad">
         </div>
         <div class="grid-img7">
-            <img src="../assets/Sucursal/Sucursal7.jpg" alt="">
+            <img src="../assets/Sucursal/Sucursal7.jpg" alt="Estanterias con buloneria">
         </div>
         <div class="grid-img8">
-            <img src="../assets/Sucursal/Sucursal8.jpg.png" alt="">
+            <img src="../assets/Sucursal/Sucursal8.jpg" alt="Personal">
         </div>
         <div class="grid-img9">
-            <img src="../assets/Sucursal/Sucursal9.jpg" alt="">
+            <img src="../assets/Sucursal/Sucursal9.jpg" alt="Personal trabajando">
         </div>
     </div>
     <div class="centrado">
@@ -101,7 +106,7 @@
         <a href="#top" class="a">Ir a la parte superior</a>
         <div>
         <p>Redes sociales</p>
-            <ul class="redes-sociales">
+            <ul class="rs">
                 <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
                 <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
@@ -109,7 +114,8 @@
         </div>
         <p> CONTÁCTANOS LA DELFINA S.A.
             0800-777-4272
-            ventas@ladelfina.com.ar</p><br>
+            ventas@ladelfina.com.ar
+        </p><br>
         <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
         <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
