se realizan 3 resposive sobre nosotros, index, galeria

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -68,17 +68,17 @@
                 <input type="number" placeholder="Cantidad">
                 <input type="reset">
                 <input type="submit" placeholder="Comprar">
-            <article><img src="../assets/productos/productos 3.png" alt="Sistema de encendido" class="card-prod prod-2"></article>
+            <div><img src="../assets/productos/productos 3.png" alt="Sistema de encendido" class="card-prod prod-2"></div>
             <form action="#top" class="form-sumate">
                 <input type="number" placeholder="Cantidad">
                 <input type="reset">
                 <input type="submit" placeholder="Comprar">
-            <article><img src="../assets/productos/productos 4.png" alt="Filtros" class="card-prod prod-3"></article>
+            <div><img src="../assets/productos/productos 4.png" alt="Filtros" class="card-prod prod-3"></div>
             <form action="#top" class="form-sumate">
                 <input type="number" placeholder="Cantidad">
                 <input type="reset" class="form-input">
                 <input type="submit" placeholder="Comprar" class="form-input">
-            <article><img src="../assets/productos/productos 5.png" alt="Amortiguación" class="card-prod prod-4"></article>
+            <div><img src="../assets/productos/productos 5.png" alt="Amortiguación" class="card-prod prod-4"></div>
             <form action="#top" class="form-sumate">
                 <input type="number" placeholder="Cantidad">
                 <input type="reset">
