--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -80,10 +80,12 @@
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
             </ul>
         </div>
+        <div class="respon-sn">
         <p> CONTÁCTANOS LA DELFINA S.A.
             0800-777-4272
             ventas@ladelfina.com.ar
         </p><br>
+        </div>
         <a href="../pages/avisos-legales.html" class="a">Avisos legales</a>
         <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
