--- a/index.html
+++ b/index.html
@@ -131,15 +131,17 @@
         <div>
         <p>Redes sociales</p>
             <ul class="rs">
-                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
+                <li><a  href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook a"></i></a></li>
                 <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter a"></i></a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram a"></i></a></li>
             </ul>
         </div>
+        <div class="respon-sn">
             <p> CONTÁCTANOS LA DELFINA S.A.
                 0800-777-4272
                 ventas@ladelfina.com.ar
             </p><br>
+        </div>
             <a href="./pages/avisos-legales.html" class="a">Avisos legales</a>
             <p>Copyright ©2016 La delfina S.A.</p>
     </footer>
