--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <!--Inicio Header-->
-    <header id="top" class="header-1 header"> 
+    <header id="top" class="header"> 
           <a href="#">
             <img src="./assets/Logo principal.png" alt="Logo principal" class="logo"></a>
             <nav id="nav" class="navbar navbar-expand-lg">
