--- a/pages/avisos-legales.html
+++ b/pages/avisos-legales.html
@@ -15,7 +15,7 @@
     <title>LA DELFINA | Aviso Legales</title>
 </head>
 <body>
-    <header id="top" class="header-1"> 
+    <header id="top"> 
         <nav id="nav" class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a href="../index.html">
@@ -60,13 +60,7 @@
          Dispone que los plazos previstos en las garantías contractuales y legales en los términos de la Ley N° 24.240 se tienen por suspendidos por todo el periodo en que los consumidores se hayan visto imposibilitados de ejercer sus derechos en virtud del Aislamiento Social, Preventivo y Obligatorio dictado por el Decreto Nº 297 de fecha 19 de marzo de 2020 y sus modificatorios.</p>
             <p>Los repuestos y accesorios con la segunda importación más grande de la Argentina. Según datos del INDEC, en abril de 2023 representaron el 22% de las importaciones con 1.322 millones de dólares y un incremento del 3,3% respecto de abril del año anterior. En realidad, son un componente fundamental de los procesos industriales. Sin embargo, está prohibido el transporte transfronterizo de repuestos de automotores y otros. LA DELFINA, cumple con todas las normas y leyes nencesarias para su tranquilidad</p>
     <p><a href="https://www.boletinoficial.gob.ar/detalleAviso/primera/234093/20200826" target="_blank">Accedé a la norma completa: Resolución 244/2020</p></a>
-    </main>
-    <div>
-         <!--Boton de wsp-->
-        <a href="https://wa.me/+5493516015248?text=Hola! Tengo una consulta para ustedes" target="_blank" class="sticky">
-        <img src="../assets/WhatsApp.jpg" alt="WhatsApp Chat" class="wsp">
-        </a>
-    </div>   
+    </main> 
     <!--Inicio footer-->
     <footer>
         <a href="#top" class="a">Ir a la parte superior</a>
