--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -15,7 +15,7 @@
     <title>LA DELFINA | Galeria</title>
 </head>
 <body>
-    <header id="top" class="header-1"> 
+    <header id="top"> 
         <nav id="nav" class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a href="../index.html">
@@ -52,38 +52,38 @@
           </div>
         </nav>
       </header>
-    <div>
-      <h1 class="titulo-galeria">NUESTRA EMPRESA</h1>
-    </div>
-    <div class="grid-container">
-        <div class="grid-img1">
-            <img src="../assets/Sucursal/Sucursal1.jpg" alt="Nuestra sucursal">
-        </div>
-        <div class="grid-img2">
-            <img src="../assets/Sucursal/Sucursal2.jpg" alt="Empresa y personal">
-        </div>
-        <div class="grid-img3">
-            <img src="../assets/Sucursal/Sucursal3.jpg" alt="Nuestro deposito principal">
-        </div>
-        <div class="grid-img4">
-            <img src="../assets/Sucursal/Sucursal4.jpg" alt="Transporte para repartir">
-        </div>
-        <div class="grid-img5">
-            <img src="../assets/Sucursal/Sucursal5.jpg" alt="Baterias de litio para autos">
-        </div>
-        <div class="grid-img6">
-            <img src="../assets/Sucursal/Sucursal6.jpg" alt="Estanteria de repuestos de electricidad">
-        </div>
-        <div class="grid-img7">
-            <img src="../assets/Sucursal/Sucursal7.jpg" alt="Estanterias con buloneria">
-        </div>
-        <div class="grid-img8">
-            <img src="../assets/Sucursal/Sucursal8.jpg" alt="Personal">
-        </div>
-        <div class="grid-img9">
-            <img src="../assets/Sucursal/Sucursal9.jpg" alt="Personal trabajando">
-        </div>
-    </div>
+      <div>
+        <h1 class="titulo-galeria">NUESTRA EMPRESA</h1>
+      </div>
+      <div class="grid-container">
+          <div class="grid-img1">
+              <img src="../assets/Sucursal/Sucursal1.jpg" alt="Nuestra sucursal">
+          </div>
+          <div class="grid-img2">
+              <img src="../assets/Sucursal/Sucursal2.jpg" alt="Empresa y personal">
+          </div>
+          <div class="grid-img3">
+              <img src="../assets/Sucursal/Sucursal3.jpg" alt="Nuestro deposito principal">
+          </div>
+          <div class="grid-img4">
+              <img src="../assets/Sucursal/Sucursal4.jpg" alt="Transporte para repartir">
+          </div>
+          <div class="grid-img5">
+              <img src="../assets/Sucursal/Sucursal5.jpg" alt="Baterias de litio para autos">
+          </div>
+          <div class="grid-img6">
+              <img src="../assets/Sucursal/Sucursal6.jpg" alt="Estanteria de repuestos de electricidad">
+          </div>
+          <div class="grid-img7">
+              <img src="../assets/Sucursal/Sucursal7.jpg" alt="Estanterias con buloneria">
+          </div>
+          <div class="grid-img8">
+              <img src="../assets/Sucursal/Sucursal8.jpg" alt="Personal">
+          </div>
+          <div class="grid-img9">
+              <img src="../assets/Sucursal/Sucursal9.jpg" alt="Personal trabajando">
+          </div>
+      </div>
     <div class="centrado">
         <nav aria-label="Page navigation example">
             <ul class="pagination">
