--- a/pages/productos.html
+++ b/pages/productos.html
@@ -15,7 +15,7 @@
     <title>LA DELFINA | Productos</title>
 </head>
 <body class="grid-container-prod">
-    <header id="top" class="header-1"> 
+    <header id="top" > 
         <nav id="nav" class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a href="../index.html">
@@ -63,7 +63,7 @@
             </form>
         </div>
         <div class="div-productos">
-            <div class="productos"><img src="../assets/productos/productos 2.png" alt="Frenos" class="card-prod prod-1"></div>
+            <div><img src="../assets/productos/productos 2.png" alt="Frenos" class="card-prod prod-1"></div>
             <form action="#top" class="form-sumate">
                 <input type="number" placeholder="Cantidad">
                 <input type="reset">
@@ -83,7 +83,7 @@
                 <input type="number" placeholder="Cantidad">
                 <input type="reset">
                 <input type="submit" placeholder="Comprar">
-            </div>
+          </div>
         <div class="satisfaccion">
             <form action="#">
                 <h6>¿Te pareció util esta información?</h6>
