--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,7 @@
     <title>LA DELFINA | Contacto</title>
 </head>
 <body>
-    <header id="top" class="header-1"> 
+    <header id="top"> 
         <nav id="nav" class="navbar navbar-expand-lg">
             <div class="container-fluid">
             <a href="../index.html">
