--- a/pages/sumate.html
+++ b/pages/sumate.html
@@ -15,7 +15,7 @@
     <title>LA DELFINA | Sumate!</title>
 </head>
 <body>
-  <header id="top" class="header-1"> 
+  <header id="top"> 
       <nav id="nav" class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a href="../index.html">
