--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,17 +15,17 @@
     <title>LA DELFINA | Contacto</title>
 </head>
 <body>
-    <header id="top"> 
-        <nav id="nav" class="navbar navbar-expand-lg">
+    <header id="top" class="header"> 
+        <a href="#">
+          <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
+          <nav id="nav" class="navbar navbar-expand-lg">
             <div class="container-fluid">
-            <a href="../index.html">
-                <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              </button>
+              <div class="collapse navbar-collapse header-1" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
@@ -88,8 +88,8 @@
                         <label class="form-label">Teléfono</label>
                         <input type="number" class="form-control" placeholder="Ingrese su teléfono de contacto" required>
                     </div>
-                    <div>
-                        <textarea cols="70" rows="10" class="form-ta-sumate">Envía tus comentarios</textarea> 
+                    <div >
+                        <textarea class="form-ta-sumatesn">Envía tus comentarios</textarea> 
                     </div>
                     <div>
                         <button class="btn submit-index" type="submit">Enviar información</button>
