--- a/pages/productos.html
+++ b/pages/productos.html
@@ -15,7 +15,7 @@
     <title>LA DELFINA | Productos</title>
 </head>
 <body class="grid-container-prod">
-    <header id="top" > 
+    <header id="top" class="header"> 
         <nav id="nav" class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a href="../index.html">
