--- a/pages/sumate.html
+++ b/pages/sumate.html
@@ -15,15 +15,15 @@
     <title>LA DELFINA | Sumate!</title>
 </head>
 <body>
-  <header id="top"> 
+  <header id="top" class="header"> 
+    <a href="#">
+      <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
       <nav id="nav" class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a href="../index.html">
-            <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Navegable">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse header-1" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
@@ -80,20 +80,18 @@
                 <div class="form-sumate">
                   <label class="form-label">Puesto de interés</label>
                   <select class="form-select" required>
-                    <option selected disabled value="">Encargado</option>
+                    <option selected disabled value="">Seleccione su puesto</option>
                     <option>Vendedor</option>
                     <option>Repositor</option>
-                    <option>Viajante</option>
+                    <option>Encargado</option>
                   </select>
                 </div>
                 <div class="form-sumate">
                   <label for="validationCustom05" class="form-label">Fecha de nacimiento</label>
                   <input type="date" class="form-control" required>
                 </div>
-                <div class="form-sumate">
-                </div>
                 <div>
-                    <textarea cols="70 " rows="10" class="form-ta-sumate">Breve descripción de aptitudes</textarea> 
+                    <textarea class="form-ta-sumatesn">Breve descripción de aptitudes</textarea> 
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
