proyecto final entrega

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h4>Embragues, Frenos, Bomba de Agua, Tren delantero, Ópticas, Inyección electrónica, Guardabarros, Tazas, Amortiguadores, Paragolpes, Baterías.</h4>
         </div>
     </main>
-
+    <!--Inicio seccion principal-->
       <section class="main">
         <div class="card-grid">
           <div class="card">
@@ -95,7 +95,7 @@
             </div>
           </div>
         </div>
-
+      <!--Animacion-->
         <section class="index datos animacion">
             <div><strong>3927</strong> CLIENTES CONTENTOS</div><div><strong>1299918</strong> PRODUCTOS VENDIDOS</div><div><strong>30</strong> AÑOS DE EXPERIENCIA</div><div><strong>9/10</strong> NOS RECOMIENDAN</div>
         </section>
@@ -103,11 +103,11 @@
         <div class="formbb animacion">
             <p>Nos llena de felicidad poder anunciarles que estamos incursionando en el mundo de los chasis de la mano de los mejores: <a href="https://collinotiendaoficial.com.ar/" target="_blank" class="ab">COLLINO</a>. Les dejamos un poco de lo que fue su último gran trabajo. Innovadores y distruptivos es como se definen y este chasis afirma estos conceptos
         </div>
-
+      <!--Iframe youtube-->
         <div class="iframe animacion">  
               <iframe class="clase-video" src="https://www.youtube.com/embed/PQzeYa6_ejw?si=WR13k6yOIIEObm01" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-
+      <!--Ultima seccion del index-->
         <div class="h2-grid animacion">
             <h2>NOS ACOMPAÑAN EN ESTE CAMINO</h2>
         </div>
@@ -124,7 +124,6 @@
         <img src="./assets/WhatsApp.jpg" alt="WhatsApp Chat" class="wsp">
         </a>
     </div>
- 
     <!--Inicio footer-->
     <footer class="footer">
         <a href="#top" class="a">Ir a la parte superior</a>
