--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header id="top" class="header"> 
-        <a href="#">
+        <a href="../index.html">
           <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
           <nav id="nav" class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -81,12 +81,12 @@
                     <div class="form-sumate">
                         <label class="form-label">Correo Electrónico</label>
                         <div class="input-group has-validation">
-                        <input type="email" class="form-control" placeholder="Ingrese su correo" required>
+                        <input type="email" class="form-control" placeholder="Ingrese correo" required>
                         </div>
                     </div>
                     <div class="form-sumate">
                         <label class="form-label">Teléfono</label>
-                        <input type="number" class="form-control" placeholder="Ingrese su teléfono de contacto" required>
+                        <input type="number" class="form-control" placeholder="Ingrese su teléfono" required>
                     </div>
                     <div >
                         <textarea class="form-ta-sumatesn">Envía tus comentarios</textarea> 
