--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header id="top" class="header"> 
-    <a href="#">
+    <a href="../index.html">
       <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
       <nav id="nav" class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -53,6 +53,7 @@
         </nav>
       </header>
       <div>
+        <!--Galeria ejemplos grid-->
         <h1 class="titulo-galeria">NUESTRA EMPRESA</h1>
       </div>
       <div class="grid-container">
