--- a/pages/productos.html
+++ b/pages/productos.html
@@ -16,7 +16,7 @@
 </head>
 <body class="grid-container-prod">
   <header id="top" class="header"> 
-    <a href="#">
+    <a href="../index.html">
       <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
       <nav id="nav" class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -62,6 +62,7 @@
                 <button class="btn1" type="submit">Buscar</button>
             </form>
         </div>
+        <!--Productos-->
         <div class="div-productos">
             <div><img src="../assets/productos/productos 2.png" alt="Frenos" class="card-prod prod-1"></div>
             <form action="#top" class="form-sumate">
@@ -84,6 +85,7 @@
                 <input type="reset">
                 <input type="submit" placeholder="Comprar">
           </div>
+        <!--Barra de satisfaccion-->
         <div class="satisfaccion">
             <form action="#">
                 <h6>¿Te pareció util esta información?</h6>
