--- a/pages/sumate.html
+++ b/pages/sumate.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header id="top" class="header"> 
-    <a href="#">
+    <a href="../index.html">
       <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
       <nav id="nav" class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -57,6 +57,7 @@
         <h1>Sumate a LA DELFINA</h1>
         <h2>En La Delfina trabajamos desde una década para crecer y desarrollarnos en todo el país ofreciendo el mejor servicio. Esto lo logramos gracias a la participación, compromiso y el trabajo conjunto diario de todos los que la integramos.</h2>
         <h3><strong>Si querés desarrollarte profesionalmente y formar parte de un equipo ganador, envíanos tus datos y nos comunicaremos a la brevedad</strong></h3>
+        <!--Formularios-->
         <section class="centrado">
             <form action="../index.html">
                 <div class="form-sumate">
@@ -70,12 +71,12 @@
                 <div class="form-sumate">
                   <label class="form-label">Correo Electrónico</label>
                   <div class="input-group has-validation">
-                    <input type="email" class="form-control" placeholder="Ingrese su correo" required>
+                    <input type="email" class="form-control" placeholder="Ingrese correo" required>
                   </div>
                 </div>
                 <div class="form-sumate">
                   <label class="form-label">Teléfono</label>
-                  <input type="number" class="form-control" placeholder="Ingrese su teléfono de contacto" required>
+                  <input type="number" class="form-control" placeholder="Ingrese teléfono" required>
                 </div>
                 <div class="form-sumate">
                   <label class="form-label">Puesto de interés</label>
