--- a/pages/avisos-legales.html
+++ b/pages/avisos-legales.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header id="top" class="header"> 
-    <a href="#">
+    <a href="../index.html">
       <img src="../assets/Logo principal.png" alt="Logo principal" class="logo"></a>
       <nav id="nav" class="navbar navbar-expand-lg">
         <div class="container-fluid">
